Converted control section

--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -41,6 +41,19 @@
     "of biological species with diverse, sometimes exotic external and\n",
     "internal structures, the range of possible robot designs is endless.\n",
     "\n",
+    "***************\n",
+    "\n",
+    "|![fig:RobotAnatomya](figures/introduction/pioneer.png)| ![fig:RobotAnatomyb](figures/introduction/asimo.jpg) |\n",
+    "|:-----------------------------------------------------|:-----------------------------------------------------|\n",
+    "| **Pioneer mobile robot**                             | **Honda Asimo humanoid robot**                       |\n",
+    "| 1 link (body), 0 joints                              | 72 links (incl. fingers), 26 joints                  |\n",
+    "| Actuated by wheels (differential drive)              | Actuated by electrical motors + speaker              |\n",
+    "| Sensors: SICK laser, sonar ,wheel encoders           | Sensors: stereo cameras, joint encoders, gyroscope, inertial measurement unit, foot pressure sensors |\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:RobotAnatomy\">Figure 1</a>. Two robots with very different \"anatomy\".</div>\n",
+    "\n",
+    "***************\n",
+    "\n",
     "The capabilities of robots have been changing fluidly over the years, as\n",
     "researchers invent new materials, fabrication strategies, circuits,\n",
     "computers, sensors, and actuation devices. Indeed, keeping up with the\n",
@@ -70,7 +83,7 @@
     "The links and joints of a robot also make up its outward appearance, and\n",
     "for some applications significant effort is devoted to designing a\n",
     "pleasing appearance. To an engineer this may seem like a frivolous\n",
-    "concern, but the success of a consumer good often rests on the appeal of\n",
+    "concern, but the success of a consumer product often rests on the appeal of\n",
     "its design! Robots that are designed for direct human interaction, such\n",
     "as haptic devices or exoskeletons, should also be designed with\n",
     "ergonomic concerns in mind.\n",
@@ -89,16 +102,19 @@
     "\n",
     "## Sensors\n",
     "\n",
-    "TODO: fill out section\n",
+    "Sensors are devices that measure some physical quantities of the world and encode the signals into electrical (typically digital) form.  There are many kinds of sensors, and more are being invented every year.  Common sensor types in robotics are given below.\n",
     "\n",
-    "- Proprioceptive &mdash; joint encoders (relative vs absolute), joint\n",
-    "  limit contact switches\n",
-    "- Inertial &mdash; gyro, accelerometer, IMU\n",
-    "- Tactile &mdash; contact switch, force/torque sensor (load cell), scale,\n",
-    "  pressure sensor, tactile array\n",
-    "- Visual &mdash; camera, laser rangefinder, depth sensor\n",
-    "- Other &mdash; sonar, temperature (especially motor temperature), gas sensors,\n",
-    "  battery voltage\n",
+    "| Type | Examples | Purpose |\n",
+    "|:-----|:---------|:--------|\n",
+    "|Proprioceptive | joint encoders (relative or absolute), joint limit contact switches | Measure the position of a link relative to another. |\n",
+    "| Inertial      | gyro, accelerometer, IMU | Measure the acceleration, velocity, or position of a link. |\n",
+    "| Tactile       | contact switch, force/torque sensor (load cell), scale, pressure sensor, tactile array | Detect external forces on the robot's body. | \n",
+    "| Visual        | monocular camera, stereo camera, laser rangefinder, depth sensor | Measure light intensity from the robot's surroundings.  Some sensors estimate distance from the device to objects in the world via triangulation or time-of-flight.  |\n",
+    "| Other         | GPS, sonar, temperature (especially motor temperature), gas sensors, battery voltage |  |\n",
+    "\n",
+    "Most of the time, sensors are mounted to a link of the robot, and move while the robot moves.  The raw data produced by the sensor is often not particularly useful in itself (e.g., cameras will give you pixel colors rather than object identities), and perception algorithms must process this data into meaningful quantities.  It is important to build accurate models of the physics behind the sensor (and methods for \"inverting\" these physics) in order to help a robot correlate sensor signals into an understanding of the physical world.\n",
+    "\n",
+    "The position and orientation of the sensor on the link is extremely important to be able to make sense of sensor data; we will look into this more when we discuss calibration.\n",
     "\n",
     "## Actuators and Transmissions\n",
     "\n",
