--- a/Book.ipynb
+++ b/Book.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Duke University\n",
     "\n",
-    "Last update: 8/25/2018\n",
+    "Last update: 8/31/2018\n",
     "\n",
     "\n",
     "Table of Contents\n",
@@ -21,30 +21,30 @@
     "\n",
     "* Section I. Introduction\n",
     "  * [Chapter 1. What is robotics?](WhatIsRobotics.ipynb)\n",
-    "  * [Chapter 2. Anatomy of a robot](AnatomyOfARobot.ipynb) **incomplete**\n",
+    "  * [Chapter 2. Anatomy of a robot](AnatomyOfARobot.ipynb) **75% complete**\n",
     "\n",
     "* Section II. Modeling\n",
     "\n",
     "  * [Chapter 3. Coordinate transformations](CoordinateTransformations.ipynb)\n",
     "  * [Chapter 4. 3D rotations](3DRotations.ipynb)\n",
     "  * [Chapter 5. Robot kinematics](Kinematics.ipynb)\n",
-    "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb) **needs fixing**\n",
-    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **incomplete**\n",
+    "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb)\n",
+    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **50% complete**\n",
     "\n",
     "* Section III. Motion Planning\n",
     "\n",
-    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb)\n",
-    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **needs fixing**\n",
-    "  * [Chapter 10. Sampling based motion planning](SamplingBasedMotionPlanning.ipynb) **needs conversion**\n",
-    "  * [Chapter 11. Extensions to motion planning](ExtensionsToMotionPlanning.ipynb) **needs conversion**\n",
+    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **75% complete**\n",
+    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **75% complete**\n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **85% complete**\n",
+    "  * [Chapter 11. Extensions to motion planning](ExtensionsToMotionPlanning.ipynb) **incomplete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
     "\n",
-    "  * [Chapter 12. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **needs conversion**\n",
-    "  * [Chapter 13. Robot dynamics](RobotDynamics.ipynb) **needs conversion**\n",
-    "  * [Chapter 14. Stabilizing controlled systems](Control.ipynb) **needs conversion**\n",
-    "  * [Chapter 15. Control of articulated robots](RobotControl.ipynb) **needs conversion**\n",
-    "  * [Chapter 16. Optimal control](OptimalControl.ipynb) **needs conversion**\n",
+    "  * [Chapter 12. What are dynamics and control?](WhatAreDynamicsAndControl.ipynb) **needs fixing**\n",
+    "  * [Chapter 13. Robot dynamics](RobotDynamics.ipynb) **incomplete**\n",
+    "  * [Chapter 14. Stabilizing controlled systems](Control.ipynb) **needs fixing**\n",
+    "  * [Chapter 15. Control of articulated robots](RobotControl.ipynb) **needs fixing**\n",
+    "  * [Chapter 16. Optimal control](OptimalControl.ipynb) **50% complete, needs fixing**\n",
     "\n",
     "* Section V. Perception **incomplete**\n",
     "\n",
@@ -54,15 +54,19 @@
     "\n",
     "  * [A.1. Linear algebra](LinearAlgebra.ipynb)\n",
     "  * [A.2. Real analysis and calculus of many variables](Calculus.ipynb)\n",
-    "  * [A.3. Probability distributions](Probability.ipynb) **needs fixing**\n",
+    "  * [A.3. Probability distributions](Probability.ipynb)\n",
     "  \n",
     "* Appendix B. Numerical Methods\n",
     "\n",
     "  * [B.1. Numerical errors](NumericalErrors.ipynb)\n",
-    "  * [B.2. Matrix computations](MatrixComputations.ipynb) **incomplete**\n",
-    "  * [B.3. Optimization](Optimization.ipynb) **incomplete**\n",
+    "  * [B.2. Matrix computations](MatrixComputations.ipynb) **20% complete**\n",
+    "  * [B.3. Optimization](Optimization.ipynb) **50% complete**\n",
     "\n",
-    "* Appendix C. Computational methods **needs conversion**\n",
+    "* Appendix C. Computational methods \n",
+    "\n",
+    "  * [C.1. Data structures](DataStructures.ipynb)\n",
+    "  * [C.2. Graph search](GraphSearch.ipynb)\n",
+    " \n",
     "\n",
     "About\n",
     "=================\n",
