--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -953,24 +953,29 @@
     "1. Calculate the matrices representing $+90^\\circ$, $+180^\\circ$, and\n",
     "   $-90^\\circ$ 2D rotations.\n",
     "\n",
-    "2. Prove that $R(\\theta)^{-1} = R(-\\theta)$ using linear algebra and\n",
+    "*  Prove that $R(\\theta)^{-1} = R(-\\theta)$ using linear algebra and\n",
     "   geometric identities.\n",
     "\n",
-    "3. Prove that $R(\\theta_1) R(\\theta_2) = R(\\theta_1 + \\theta_2)$ using\n",
+    "*  Prove that $R(\\theta_1) R(\\theta_2) = R(\\theta_1 + \\theta_2)$ using\n",
     "   geometric identities.\n",
     "\n",
-    "4. Give examples of 3D rotation matrices for which\n",
+    "*  Give examples of 3D rotation matrices for which\n",
     "   $R_1 R_2 \\neq R_2 R_1$.\n",
     "\n",
-    "5. Prove that vector length is preserved under rotation\n",
+    "*  Prove that vector length is preserved under rotation\n",
     "   $\\| R(\\theta) \\V{x} \\| = \\| \\V{x} \\|$. Use this fact to prove that\n",
     "   distance is preserved under rigid transforms.\n",
     "\n",
-    "6. Prove that all length-preserving transforms in 2D are either\n",
+    "*  Prove that all length-preserving transforms in 2D are either\n",
     "   rotations or rotations followed by a mirroring transform:\n",
     "   $$T(\\V{x}) = \\begin{bmatrix} -1 & 0 \\\\ 0 & 1 \\end{bmatrix} \\V{x}.$$\n",
+    "   \n",
+    "*  Produce the transform (i.e., rotation matrix $R$ and translation $\\V{t}$) that\n",
+    "   rotates any point $\\V{x}$ by $45^\\circ$ about the point $(1,0)$. \n",
+    "   \n",
+    "   What is the general form of a rotation of angle $\\theta$  about a center point $\\V{c}$?\n",
     "\n",
-    "7. A mobile robot has a coordinate convention that $X$ is forward and\n",
+    "*  A mobile robot has a coordinate convention that $X$ is forward and\n",
     "   $Y$ is to the left. It has an sweeping laser sensor attached to it\n",
     "   that returns distance readings at all angles around the robot using\n",
     "   a spinning mirror. The laser sensor gives perfect depth readings,\n",
@@ -983,7 +988,7 @@
     "   obstacle does not move, at which angle will the sensor detect the\n",
     "   obstacle, and at what distance reading?\n",
     "\n",
-    "8. Suppose a 3D camera produces points $(x,y,z)$ in a coordinate frame\n",
+    "*  Suppose a 3D camera produces points $(x,y,z)$ in a coordinate frame\n",
     "   that has $+x$ pointing to the right of the image, $+y$ pointing\n",
     "   upward, and $+z$ pointing forward. Is the camera given with a\n",
     "   right-handed or a left handed coordinate system?\n",
@@ -995,18 +1000,18 @@
     "   $Z$ direction, and left in the image points in the $Y$ direction.\n",
     "   Give a transformation for converting camera points to world points.\n",
     "\n",
-    "9. Prove\n",
+    "*  Prove\n",
     "   ($\\ref{eq:RigidTransformInverse}$), i.e., that\n",
     "   $T_{(R,\\V{t})} ^{-1} = T_{(R^T,-R^T \\V{t})}$.\n",
     "\n",
-    "10. The midpoint between positions $P$ and $Q$ is given by the equation\n",
+    "*   The midpoint between positions $P$ and $Q$ is given by the equation\n",
     "    $M = 0.5 * (P+Q)$. But this expression appears to violate the\n",
     "    [assumptions above](#Associating-Physical-Meaning-to-Operations-on-Coordinates),\n",
     "    stating that addition and scalar multiplication with\n",
     "    positions are not meaningful operations. How can one make sense of\n",
     "    this equation in terms of purely meaningful operations?\n",
     "\n",
-    "11. Implement a 2D coordinate management system, in your programming\n",
+    "*   Implement a 2D coordinate management system, in your programming\n",
     "    language of choice, where each position must be annotated with a\n",
     "    frame. Your system should define an API to create positions and\n",
     "    frames, and to retrieve coordinates of any position in any given\n",
@@ -1026,6 +1031,40 @@
     "    and `Direction`, respectively, whose reference frames are now the\n",
     "    given frame, and whose coordinates are expressed correctly relative\n",
     "    to the new frame.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Skeleton code for exercise 12\n",
+    "\n",
+    "class Frame:\n",
+    "    #TODO: what here?\n",
+    "    pass\n",
+    "\n",
+    "#a dictionary from strings to Frame objects, to be used in Point.to and Direction.to\n",
+    "named_frames = dict()\n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self,coords,frame):\n",
+    "        self.coords = coords\n",
+    "        self.frame = frame\n",
+    "    def to(self,newframe):\n",
+    "        \"\"\"Returns a Point expressing the same physical point in space, but represented in the new frame\"\"\"\n",
+    "        #TODO: what here?\n",
+    "        return Point(self.coords,newframe)\n",
+    "\n",
+    "class Direction:\n",
+    "    def __init__(self,coords,frame):\n",
+    "        self.coords = coords\n",
+    "        self.frame = frame\n",
+    "    def to(self,newframe):\n",
+    "        \"\"\"Returns a Direction expressing the same physical direction in space, but represented in the new frame\"\"\"\n",
+    "        #what here?\n",
+    "        return Point(self.coords,newframe)"
    ]
   },
   {
