--- a/DataStructures.ipynb
+++ b/DataStructures.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "*****************************\n",
     "\n",
-    "![fig:abcdGraph](appendix/abcd_graph.svg) \n",
+    "![fig:abcdGraph](figures/appendix/abcd_graph.svg) \n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:AdjacencyList\">Figure 2</a>. A simple graph</div>\n",
     "\n",
