--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -56,23 +56,48 @@
     "Bug algorithms\n",
     "--------------\n",
     "\n",
-    "\\centering\n",
-    "![The simple Bug 1 algorithm that simply heads toward the goal, turns\n",
+    "*************\n",
+    "\n",
+    "![fig:Bug0](figures/planning/bug0.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Bug0\">Figure 1</a>.\n",
+    "    The simple Bug 1 algorithm that simply heads toward the goal, turns\n",
     "left, and then continues towards the goal whenever it\n",
-    "can.[]{label=\"fig:Bug0\"}](planning/bug0){#fig:Bug0 width=\"70%\"}\n",
+    "can.\n",
+    "</div>\n",
     "\n",
-    "\\centering\n",
-    "![The Bug 2 algorithm that remembers the line from the start to the\n",
+    "*************\n",
+    "\n",
+    "*************\n",
+    "\n",
+    "![fig:Bug2](figures/planning/bug2.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Bug2\">Figure 2</a>.\n",
+    "    The Bug 2 algorithm that remembers the line from the start to the\n",
     "goal, and circumnavigates an obstacle until it meets the line again at a\n",
-    "closer point to the goal.[]{label=\"fig:Bug2\"}](planning/bug2){#fig:Bug2\n",
-    "width=\"70%\"}\n",
+    "closer point to the goal.\n",
+    "</div>\n",
     "\n",
-    "\\centering\n",
-    "![A \"bugtrap\" environment designed so that Bug 1 falls into an infinite\n",
+    "\n",
+    "*************\n",
+    "\n",
+    "*************\n",
+    "\n",
+    "![fig:Bugtrap](figures/planning/bugtraps.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Bugtrap\">Figure 3</a>.\n",
+    "    A \"bugtrap\" environment designed so that Bug 1 falls into an infinite\n",
     "loop, while Bug 2\n",
-    "succeeds.[]{label=\"fig:Bugtrap\"}](planning/bugtraps){#fig:Bugtrap\n",
-    "width=\"90%\"}\n",
+    "succeeds.\n",
+    "</div>\n",
     "\n",
+    "*************\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Roadmap planners\n",
     "----------------\n",
     "\n",
@@ -86,9 +111,7 @@
     "\n",
     "### Grid search\n",
     "\n",
-    "\\centering\n",
-    "![Searching along a grid is a resolution complete\n",
-    "method.[]{label=\"fig:Grid4\"}](planning/grid4){#fig:Grid4 width=\"90%\"}\n",
+    "\n",
     "\n",
     "A straightforward method for planning paths in 2D is grid search. Let us\n",
     "define the graph $G$ such that all vertices lie on a grid, and all edges\n",
@@ -97,18 +120,18 @@
     "vertices from the grid that are contained within obstacles, and remove\n",
     "edges that intersect obstacles, then a search on the remaining graph\n",
     "will yield a path from the start to the goal\n",
-    "(Fig. [\\[fig:Grid4\\]](#fig:Grid4){reference-type=\"ref\"\n",
-    "reference=\"fig:Grid4\"}).\n",
+    "([Fig. 4](#fig:Grid4)).\n",
     "\n",
-    "\\centering\n",
-    "![(Left) A grid search is very likely to fail if the robot needs to pass\n",
-    "through a narrow passage smaller than the grid resolution. (Middle) The\n",
-    "clearance of a path is the minimum distance to obstacles of any point on\n",
-    "the path. (Right) If there exists a path with clearance at least\n",
-    "$d \\geq h/\\sqrt{2}$ away from obstacles, then a grid planner with\n",
-    "resolution $h$ will find a\n",
-    "path.[]{label=\"fig:NarrowPassageGrid\"}](planning/narrow_passage_grid){#fig:NarrowPassageGrid\n",
-    "width=\"90%\"}\n",
+    "****************\n",
+    "\n",
+    "![fig:Grid4](figures/planning/grid4.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Grid4\">Figure 4</a>.\n",
+    "    Searching along a grid is a resolution complete\n",
+    "method.\n",
+    "</div>\n",
+    "\n",
+    "****************\n",
     "\n",
     "There are two main issues with grid search. First, if the obstacles are\n",
     "constructed to contain *narrow passages* smaller than the resolution of\n",
@@ -116,9 +139,24 @@
     "even if one exists in the continuous space (unless we are lucky and the\n",
     "narrow passage lines up with the grid edges). The solution to this\n",
     "problem is to increase the resolution of the grid until it is\n",
-    "sufficiently fine to find a path through the narrow passage.\n",
-    "(Fig. [\\[fig:NarrowPassageGrid\\]](#fig:NarrowPassageGrid){reference-type=\"ref\"\n",
-    "reference=\"fig:NarrowPassageGrid\"})\n",
+    "sufficiently fine to find a path through the narrow passage, as shown below.\n",
+    "\n",
+    "****************\n",
+    "\n",
+    "![fig:NarrowPassageGrid](figures/planning/narrow_passage_grid.svg){#fig:NarrowPassageGrid\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:NarrowPassageGrid\">Figure 5</a>.\n",
+    "    (Left) A grid search is very likely to fail if the robot needs to pass\n",
+    "through a narrow passage smaller than the grid resolution. (Middle) The\n",
+    "clearance of a path is the minimum distance to obstacles of any point on\n",
+    "the path. (Right) If there exists a path with clearance at least\n",
+    "$d \\geq h/\\sqrt{2}$ away from obstacles, then a grid planner with\n",
+    "resolution $h$ will find a\n",
+    "path.\n",
+    "</div>\n",
+    "\n",
+    "****************\n",
+    "\n",
     "\n",
     "To make this more rigorous, let us denote the *clearance* of a point as\n",
     "the distance to the nearest obstacle, and the clearance of a path to be\n",
@@ -127,10 +165,6 @@
     "least $h / \\sqrt 2$, then search on a grid with resolution $h$ will find\n",
     "a feasible path. Hence, grid search is resolution-complete.\n",
     "\n",
-    "\\centering\n",
-    "![Searching with 8-connected grid points allows the planner to compute\n",
-    "slightly shorter paths.[]{label=\"fig:Grid8\"}](planning/grid8){#fig:Grid8\n",
-    "width=\"90%\"}\n",
     "\n",
     "The second issue is that the grid does not contain shortest paths in the\n",
     "original space. Any diagonal movement can only be approximated by a\n",
@@ -141,6 +175,18 @@
     "cells on each axis (moving in directions (2,1) (1,2), (-1,2), etc.) can\n",
     "be added to the graph. The drawback of adding additional edges is that\n",
     "more edges must be checked for collision when constructing the graph.\n",
+    "\n",
+    "\n",
+    "****************\n",
+    "\n",
+    "![fig:Grid8](figures/planning/grid8.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Grid8\">Figure 6</a>.\n",
+    "Searching with 8-connected grid points allows the planner to compute\n",
+    "slightly shorter paths.\n",
+    "    </div>\n",
+    "\n",
+    "****************\n",
     "\n",
     "Techniques that address these problems include the Any-Angle A\\* and the\n",
     "Fast Marching Method (FMM). Both of these methods perform the\n",
@@ -155,12 +201,18 @@
     "\n",
     "### Visibility graph\n",
     "\n",
-    "\\centering\n",
-    "![Illustrating the visibility graph method. First, edges from each\n",
+    "****************\n",
+    "\n",
+    "![fig:VisibilityGraph](figures/planning/visibilitygraph.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:VisibilityGraph\">Figure 7</a>.\n",
+    "Illustrating the visibility graph method. First, edges from each\n",
     "vertex to every other vertex are added if collision free. Next, the\n",
     "visibility graph is completed. Finally, a shortest path is produced via\n",
-    "search.[]{label=\"fig:VisibilityGraph\"}](planning/visibilitygraph){#fig:VisibilityGraph\n",
-    "width=\"97%\"}\n",
+    "graph search.\n",
+    "    </div>\n",
+    "    \n",
+    "****************\n",
     "\n",
     "The *visibility graph* method was one of the earliest motion planning\n",
     "algorithms and is also notable because it is a *complete, optimal*\n",
@@ -168,19 +220,24 @@
     "to construct a graph whose vertices are the start, goal, and all\n",
     "obstacle vertices, and the edges consist of all possible collision-free\n",
     "line segments and obstacle edges. As a result, the solution paths will\n",
-    "pass directly through obstacle corners.\n",
+    "pass directly through obstacle corners.  Pseudocode for the basic visibility graph method is given below.\n",
     "\n",
-    "Let $V \\gets \\{ s, g \\}$ and all obstacle vertices. $E \\gets \\{ \\}$. Add\n",
-    "$(u,v)$ to $E$. Add $(u,v)$ to $E$. Search $G = (V,E)$, with Cartesian\n",
-    "distance as the edge cost, to connect $s$ and $g$. the path if one is\n",
-    "found.\n",
+    "*************\n",
+    "<a name=\"alg:VisibilityGraph\">**Algorithm Visibility-Graph**</a>\n",
     "\n",
-    "[\\[alg:VisibilityGraph\\]]{#alg:VisibilityGraph\n",
-    "label=\"alg:VisibilityGraph\"}\n",
+    "1. Let $V \\gets \\{ s, g \\}$ and all obstacle vertices.\n",
+    "2. $E \\gets \\{ \\}$.\n",
+    "3. **for** all pairs of distinct vertices $u, v \\in V$\n",
+    "4. &nbsp;&nbsp;&nbsp;**if** $\\overline{uv}$ is an obstacle edge\n",
+    "5. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(u,v)$ to $E$.\n",
+    "6. &nbsp;&nbsp;&nbsp;**else if** $\\overline{uv}$ is collision free\n",
+    "7. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(u,v)$ to $E$.\n",
+    "8. Search $G = (V,E)$, with Cartesian distance as the edge cost, to connect $s$ and $g$.\n",
+    "9. **return** the path if one is found.\n",
     "\n",
-    "Pseudocode for the basic visibility graph method is given in\n",
-    "Alg. [\\[alg:VisibilityGraph\\]](#alg:VisibilityGraph){reference-type=\"ref\"\n",
-    "reference=\"alg:VisibilityGraph\"}. The number of iterations of Line 3 is\n",
+    "*************\n",
+    "\n",
+    "The number of iterations of Line 3 is\n",
     "O($n^2$) where $n$ is the number of obstacle vertices. Line 6 requires\n",
     "collision checking an edge with all other obstacle edges, which is an\n",
     "O($n$) operation. Overall, this brute-force construction visibility\n",
@@ -270,8 +327,13 @@
     "The trapezoidal decomposition as stated is complete but not optimal.\n",
     "However, simple modifications of the vertical coordinates\n",
     "--straightening the path when possible --- can be made to find the\n",
-    "shortest path passing through the cells produced by the algorithm.\n",
-    "\n",
+    "shortest path passing through the cells produced by the algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Extensions to Planar Robots with Geometry\n",
     "-----------------------------------------\n",
     "\n",
@@ -322,19 +384,24 @@
     "radius $r$. In other words, it is a uniformly \"fattened\" version of the\n",
     "workspace obstacle.\n",
     "\n",
-    "\\centering\n",
-    "![(a) For a disk robot and polygonal workspace obstacles, (b) the\n",
+    "****************\n",
+    "\n",
+    "![fig:DiskCObstacle](figures/planning/disk_cobstacle.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:DiskCObstacle\">Figure 8</a>.\n",
+    "(a) For a disk robot and polygonal workspace obstacles, (b) the\n",
     "corresponding C-obstacles are polygons \"fattened\" by the robot's radius\n",
     "$r$. (Top) If the obstacle is convex, the C-obstacle is determined by\n",
     "tracing arcs at every vertex. (Bottom) If the obstacle is non-convex,\n",
     "the C-obstacle may contain\n",
-    "holes.[]{label=\"fig:DiskCObstacle\"}](planning/disk_cobstacle){#fig:DiskCObstacle\n",
-    "width=\"80%\"}\n",
+    "holes.\n",
+    "    </div>\n",
+    "\n",
+    "****************\n",
     "\n",
     "If $O$ is a convex polygon, then the boundary of the C-obstacle consists\n",
     "of a series of circular arcs and straight lines\n",
-    "(Fig. [\\[fig:DiskCObstacle\\]](#fig:DiskCObstacle){reference-type=\"ref\"\n",
-    "reference=\"fig:DiskCObstacle\"}). To construct the boundary, we may start\n",
+    "([Fig. 8](#fig:DiskCObstacle)). To construct the boundary, we may start\n",
     "with any vertex $u$ of the polygon, and place a point offset\n",
     "perpendicularly to its outgoing edge $\\overline{uv}$. Tracing a straight\n",
     "line parallel to that edge until it is perpendicular to the next vertex\n",
@@ -513,12 +580,6 @@
     "-   Define a set of curvature-constrained primitive maneuvers, and\n",
     "    perform search.\n",
     "\n",
-    "\\centering\n",
-    "![A state lattice for a curvature constrained vehicle, with 4 possible\n",
-    "orientation values. Shown are the reachable states after one, two, and\n",
-    "three\n",
-    "primitives.[]{label=\"fig:Lattice4\"}](planning/lattice4){#fig:Lattice4\n",
-    "width=\"90%\"}\n",
     "\n",
     "Here we will expand on the latter approach, since it is quite commonly\n",
     "used for autonomous vehicles and can also be adapted to handle lane\n",
@@ -529,8 +590,19 @@
     "each axis. Usually, only a few values of $\\theta$ (4 or 8) are allowed\n",
     "to take advantage of rotational symmetries in the $(x,y)$ grid.\n",
     "\n",
-    "Fig. [\\[fig:Lattice4\\]](#fig:Lattice4){reference-type=\"ref\"\n",
-    "reference=\"fig:Lattice4\"} illustrates this concept. From an initial\n",
+    "****************\n",
+    "\n",
+    "![fig:Lattice4](figures/planning/lattice4.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Lattice4\">Figure 9</a>.\n",
+    "A state lattice for a curvature constrained vehicle, with 4 possible\n",
+    "orientation values. Shown are the reachable states after one, two, and\n",
+    "three primitives.\n",
+    "    </div>\n",
+    "\n",
+    "****************\n",
+    "\n",
+    "[Fig. 9](#fig:Lattice4) illustrates this concept. From an initial\n",
     "state pointing upward, five primitive maneuvers are allowed. These are\n",
     "chosen so that curvature constraints are respected and no more than 1\n",
     "grid cell is moved in any direction. After executing one maneuver, the\n",
@@ -548,24 +620,39 @@
     "\\end{aligned}$$ This is then used as the successor function for a search\n",
     "like Dijkstra's or A\\*.\n",
     "\n",
-    "\\centering\n",
-    "![A state lattice for a curvature constrained vehicle, with 8 possible\n",
-    "orientation values. Shown are the axis-aligned primitive set (left) and\n",
-    "the non-axis aligned set\n",
-    "(right).[]{label=\"fig:Lattice8\"}](planning/lattice8){#fig:Lattice8\n",
-    "width=\"70%\"}\n",
-    "\n",
     "It should be noted that due to the coarse discretization of the\n",
     "orientation variable, to move diagonally the vehicle must swerve\n",
     "frequently. It is possible to extend this approach to more finely\n",
     "discretized orientations, but care must be taken to define primitive\n",
     "sets that transfer properly between integer cell coordinates for\n",
-    "non-axis aligned orientation values (see\n",
-    "Fig. [\\[fig:Lattice8\\]](#fig:Lattice8){reference-type=\"ref\"\n",
-    "reference=\"fig:Lattice8\"}).\n",
+    "non-axis aligned orientation values.  See the figure below for an illustration.\n",
     "\n",
+    "****************\n",
+    "\n",
+    "![fig:Lattice8](figures/planning/lattice8.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Lattice8\">Figure 10</a>.\n",
+    "    A state lattice for a curvature constrained vehicle, with 8 possible\n",
+    "orientation values. Shown are the axis-aligned primitive set (left) and\n",
+    "the non-axis aligned set\n",
+    "(right).\n",
+    "    </div>\n",
+    "\n",
+    "****************"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Summary\n",
-    "-------\n",
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Exercises\n",
     "---------\n",
@@ -660,7 +747,7 @@
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
