--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -144,8 +144,7 @@
     "compact, mathematically convenient, and lend themselves to fast\n",
     "geometric operations: exact calculations can be calculated in constant\n",
     "($O(1)$) time. (For more information about Big-O notation, consult\n",
-    "Appendix [\\[sec:BigO\\]](#sec:BigO){reference-type=\"ref\"\n",
-    "reference=\"sec:BigO\"}) However, they are the least flexible\n",
+    "[Appendix C.1.](GraphsAndSearch.ipynb#sec:Big-o-notation) However, they are the least flexible\n",
     "representation and do not represent most real geometries with high\n",
     "fidelity.\n",
     "\n",
@@ -161,7 +160,7 @@
     "-   A circle/sphere is specified by its center $\\V{c}$ and radius\n",
     "    $r > 0$.\n",
     "\n",
-    "-   A triangle is specified by its vertices $\\V{a}$, $\\V{b}$, $\\V{b}$.\n",
+    "-   A triangle is specified by its vertices $\\V{a}$, $\\V{b}$, $\\V{c}$.\n",
     "\n",
     "-   A cylinder is specified by its base $\\V{b}$, primary axis $\\V{a}$,\n",
     "    height $h > 0$, and radius $r > 0$.\n",
@@ -384,8 +383,7 @@
     "through projection of $\\V{c}$ onto the line:\n",
     "$$\\V{p} = \\V{a} + (\\V{b} - \\V{a})\\frac{(\\V{c} - \\V{a}) \\cdot (\\V{b} - \\V{a})}{\\| \\V{b} - \\V{a} \\|^2}.$$\n",
     "Then, containment of $\\V{p}$ is determined\n",
-    "through [\\[eq:SphereContainment\\]](#eq:SphereContainment){reference-type=\"eqref\"\n",
-    "reference=\"eq:SphereContainment\"}.\n",
+    "through ($\\ref{eq:SphereContainment}$).\n",
     "\n",
     "Collision between a sphere and a line segment with endpoints $\\V{a}$ and\n",
     "$\\V{b}$ is similar, but we must handle the case in which the closest\n",
@@ -407,7 +405,7 @@
     "where $u$ gives the interpolation parameter of the first line, and $v$\n",
     "gives the interpolation parameter of the second line. The solution\n",
     "$(u,v)$ can be determined through $2\\times 2$ matrix inversion:\n",
-    "$$\\MatTwo{b_{1,x} - a_{1,x}}{a_{2,x} - b_{2,x}}{b_{1,y} - a_{1,y}}{a_{2,y} - b_{2,y}} \\ColVecTwo{u}{v} = \\ColVecTwo{a_{1,x}-a_{2,x}}{a_{1,y}-a_{2,y}}$$\n",
+    "$$\\begin{bmatrix}{b_{1,x} - a_{1,x}} & {a_{2,x} - b_{2,x}} \\\\ {b_{1,y} - a_{1,y}} & {a_{2,y} - b_{2,y}} \\end{bmatrix}\\begin{bmatrix} u \\\\ v \\end{bmatrix} = \\begin{bmatrix}{a_{1,x}-a_{2,x}} \\\\ {a_{1,y}-a_{2,y}} \\end{bmatrix}$$\n",
     "If a solution $(u,v) \\in [0,1]^2$ exists, then the two line segments\n",
     "collide. (In 3D, two line segments are unlikely to collide, so this\n",
     "overdetermined system is unlikely to have a solution.)\n",
@@ -442,9 +440,9 @@
     "$\\V{a}_1,\\ldots,\\V{a}_m$ and $\\V{b}_1,\\ldots,\\V{b}_n$, listed in\n",
     "counter-clockwise order. Then, the $i$'th edge of $A$ has an outward\n",
     "normal direction\n",
-    "$$\\ColVecTwo{a_{i,y} - a_{(i\\mod m)+1,y}}{a_{(i\\mod m)+1,x} - a_{i,x}}$$\n",
+    "$$\\begin{bmatrix}{a_{i,y} - a_{(i\\mod m)+1,y}} \\\\ {a_{(i\\mod m)+1,x} - a_{i,x}} \\end{bmatrix}$$\n",
     "and the $j$'th edge of $B$ has an outward normal direction\n",
-    "$$\\ColVecTwo{b_{j,y} - b_{(j\\mod n)+1,y}}{b_{(j\\mod n)+1,x} - b_{j,x}}$$\n",
+    "$$\\begin{bmatrix}{b_{j,y} - b_{(j\\mod n)+1,y}} \\\\ {b_{(j\\mod n)+1,x} - b_{j,x}} \\end{bmatrix}$$\n",
     "where the modulo is needed to ensure proper wrapping around when $i=m$\n",
     "or $j=n$. Applying the separation principle to all such directions gives\n",
     "a straightforward way to determine whether the polygons overlap.\n",
@@ -784,12 +782,12 @@
     "$i=1,\\ldots,N$, then the weights $w_1,\\ldots,w_N$ can be tuned so that\n",
     "the function meets those values: $f(\\V{x}_j) = f_j$. This fitting is\n",
     "performed by solving a linear system of equations:\n",
-    "$$\\left[\\begin{array}{ccc}\n",
+    "$$\\begin{bmatrix}\n",
     "\\phi(\\|\\V{x}_1 - \\V{c}_1 \\|) & \\cdots & \\phi(\\|\\V{x}_1 - \\V{c}_N \\|) \\\\\n",
     "\\vdots & \\ddots & \\vdots \\\\\n",
     "\\phi(\\|\\V{x}_N - \\V{c}_1 \\|) & \\cdots & \\phi(\\|\\V{x}_N - \\V{c}_N \\|) \n",
-    "\\end{array}\\right]\n",
-    "\\ColVecThree{w_1}{\\vdots}{w_N} = \\ColVecThree{f_1}{\\vdots}{f_N}$$\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}{w_1} \\\\ {\\vdots} \\\\ {w_N} \\end{bmatrix} = \\begin{bmatrix}{f_1} \\\\ {\\vdots} \\\\ {f_N} \\end{bmatrix}$$\n",
     "\n",
     "It is then a matter to decide where to place the evaluation points,\n",
     "desired function values, and basis function centers. Certainly, placing\n",
