--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -91,40 +91,179 @@
     "with the lowest cost-to-come is marked as explored, and the costs of all\n",
     "of $v$'s unexplored neighbors $w$ in the graph are updated if the path\n",
     "to $w$ through $(v,w)$ has a lower cost than the previous value $d[w]$.\n",
-    "The algorithm is given in\n",
-    "Alg. [\\[alg:Dijkstras\\]](#alg:Dijkstras){reference-type=\"ref\"\n",
-    "reference=\"alg:Dijkstras\"}\n",
+    "Pseudocode is given in\n",
+    "[Algorithm Dijkstra's](#alg:Dijkstras).\n",
     "\n",
-    "$d[v] \\gets \\infty$ for all $v\\in V$ $d[s] \\gets 0$ $p[v] \\gets nil$ for\n",
-    "all $v\\in V$ $Q \\gets V$\n",
-    "$v \\gets \\text{vertex in } Q \\text{ that minimizes }d[v]$\n",
-    "$Q \\gets Q \\setminus \\{ v \\}$ the path leading to $g$ via the\n",
-    "predecessor list $p$ $d_{cand} \\gets d[v] + d(v,w)$\n",
-    "$d[w] \\gets d_{cand}$ $p[w] \\gets v$ \"no path\"\n",
+    "******************\n",
     "\n",
-    "[\\[alg:Dijkstras\\]]{#alg:Dijkstras label=\"alg:Dijkstras\"}\n",
+    "<a name=\"alg:Dijkstras\">Algorithm Dijkstras</a>(G=(V,E),s,g)\n",
+    "\n",
+    "1. $d[v] \\gets \\infty$ for all $v\\in V$\n",
+    "* $d[s] \\gets 0$\n",
+    "* $p[v] \\gets nil$ for all $v\\in V$ $Q \\gets V$\n",
+    "* $Q \\gets \\{ s \\}$\n",
+    "* **while** $Q$ is not empty **do**\n",
+    "* &nbsp;&nbsp;&nbsp;$v \\gets \\text{vertex in } Q \\text{ that minimizes }d[v]$\n",
+    "* &nbsp;&nbsp;&nbsp;$Q \\gets Q \\setminus \\{ v \\}$\n",
+    "* &nbsp;&nbsp;&nbsp;**if** $v = g$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**return** the path leading to $g$ via the predecessor list $p$\n",
+    "* &nbsp;&nbsp;&nbsp;**for** all $w$ such that $(v,w) \\in E$ **do**\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;$d_{cand} \\gets d[v] + d(v,w)$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $d_{cand} < d[w]$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;$d[w] \\gets d_{cand}$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;$p[w] \\gets v$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;$Q \\gets Q \\cup \\{w\\}$\n",
+    "* **return** \"no path\"\n",
+    "\n",
+    "****************\n",
     "\n",
     "Here the *predecessor list* $p$ stores the previous vertex on the\n",
     "optimal path to a vertex, and at the end of the algorithm, it is\n",
     "traversed to provide the optimal path from $s$ to $g$. This traversal is\n",
     "given in\n",
-    "Alg. [\\[alg:PredecessorTraversal\\]](#alg:PredecessorTraversal){reference-type=\"ref\"\n",
-    "reference=\"alg:PredecessorTraversal\"}\n",
+    "[Algorithm Predecessor-Traversal](#alg:PredecessorTraversal):\n",
     "\n",
-    "$L \\gets$empty list $v \\gets g$ Prepend $v$ to $L$ $v \\gets p[v]$ $L$\n",
+    "******************\n",
     "\n",
-    "[\\[alg:PredecessorTraversal\\]]{#alg:PredecessorTraversal\n",
-    "label=\"alg:PredecessorTraversal\"}\n",
+    "<a name=\"alg:PredecessorTraversal\">Algorithm PredecessorTraversal</a>(p,s,g)\n",
     "\n",
-    "It can be proven that this algorithm satisfies the invariant that any\n",
+    "1. $L \\gets$ empty list\n",
+    "* $v \\gets g$\n",
+    "* **while** $v \\neq nil$ **do**\n",
+    "* &nbsp;&nbsp;&nbsp;Prepend $v$ to $L$\n",
+    "* &nbsp;&nbsp;&nbsp;$v \\gets p[v]$\n",
+    "* **return** $L$\n",
+    "\n",
+    "******************\n",
+    "\n",
+    "It can be proven that Dijkstra's algorithm satisfies the invariant that any\n",
     "time a vertex is removed from $Q$, then its cost-to-come is the optimal\n",
     "amongst all paths to it. Furthermore, since costs are never negative,\n",
     "then the cost of the vertex in $Q$ with minimum cost always increases.\n",
     "In this way, Dijkstra's algorithm can be likened to a \"brush fire\" that\n",
     "fills in correct costs in a progressively expanding ring surrounding the\n",
     "start vertex. It is also guaranteed to terminate in finite time, since\n",
-    "it will never expand the same vertex more than once.\n",
+    "it will never expand the same vertex more than once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple graph adj list: {'A': ['B', 'C'], 'C': ['B', 'D'], 'B': ['E'], 'E': ['B', 'D'], 'D': []}\n",
+      "Running dijkstra's...\n",
+      "Dijkstra's succeeded in 4 iterations\n",
+      "Path in simple graph: ['A', 'C', 'D']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dijkstra's algorithm\n",
+    "import heapq  #for a fast priority queue implementation\n",
     "\n",
+    "class AdjListGraph:\n",
+    "    \"\"\"A very simple adjacency list graph structure.  For higher performance use\n",
+    "    in Python, you will probably want to learn a library like networkx, which will\n",
+    "    have graph search algorithms built in.\"\"\"\n",
+    "    def __init__(self,vertices,edges):\n",
+    "        self.vertices = vertices\n",
+    "        self.edges = dict((v,[]) for v in vertices)\n",
+    "        for (v,w) in edges:\n",
+    "            self.edges[v].append(w)\n",
+    "    def neighbors(self,v):\n",
+    "        return self.edges[v]\n",
+    "\n",
+    "def predecessor_traverse(p,s,g):\n",
+    "    L = []\n",
+    "    v = g\n",
+    "    while v is not None:\n",
+    "        L.append(v)\n",
+    "        v = p[v]\n",
+    "    #rather than prepending, we appended and now we'll reverse.  This is a more efficient than prepending\n",
+    "    return L[::-1]\n",
+    "    \n",
+    "def dijkstras(G,s,g,cost=(lambda v,w:1),verbose=1):\n",
+    "    d = dict((v,float('inf')) for v in G.vertices)\n",
+    "    p = dict((v,None) for v in G.vertices)\n",
+    "    d[s] = 0\n",
+    "    Q = [(0,s)]   #each element is a tuple (c,v) with c=cost from start, v=vertex\n",
+    "    nnodes = 0\n",
+    "    while len(Q) > 0:\n",
+    "        c,v = heapq.heappop(Q)  #get the element in the queue with the least value of c\n",
+    "        nnodes += 1\n",
+    "        if v == g:\n",
+    "            #found a path\n",
+    "            if verbose: print \"Dijkstra's succeeded in\",nnodes,\"iterations\"\n",
+    "            return predecessor_traverse(p,s,g)\n",
+    "        for w in G.neighbors(v):\n",
+    "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
+    "            if dcand < d[w]:\n",
+    "                #going through v is optimal\n",
+    "                #if the predecessor of w is not None, then we'll have to adjust the heap\n",
+    "                if p[w] is not None:\n",
+    "                    Q = heapq.heapify([(c,x) for (c,x) in Q if x is not w])\n",
+    "                d[w] = dcand\n",
+    "                p[w] = v\n",
+    "                #put w on the queue\n",
+    "                heapq.heappush(Q,(dcand,w))\n",
+    "    #no path found\n",
+    "    if verbose: print \"Dijkstra's failed in\",nnodes,\"iterations\"\n",
+    "    return None\n",
+    "\n",
+    "G = AdjListGraph(['A','B','C','D','E'],[('A','B'),('A','C'),('C','B'),('C','D'),('B','E'),('E','B'),('E','D')])\n",
+    "print \"Simple graph adj list:\",G.edges\n",
+    "print \"Running dijkstra's...\"\n",
+    "path = dijkstras(G,'A','D')\n",
+    "print \"Path in simple graph:\",path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dijkstra's succeeded in 60 iterations\n",
+      "Path on grid from (0,0) to (5,5): [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 5), (2, 5), (3, 5), (4, 5), (5, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_grid_graph(M,N):\n",
+    "    \"\"\"Makes a grid graph\"\"\"\n",
+    "    G = AdjListGraph([],[])\n",
+    "    for i in xrange(M):\n",
+    "        for j in xrange(N):\n",
+    "            n = (i,j)\n",
+    "            G.vertices.append(n)\n",
+    "            G.edges[n] = []\n",
+    "            if i > 0:\n",
+    "                G.edges[n].append((i-1,j))\n",
+    "            if j > 0:\n",
+    "                G.edges[n].append((i,j-1))\n",
+    "            if i+1 < M:\n",
+    "                G.edges[n].append((i+1,j))\n",
+    "            if j+1 < N:\n",
+    "                G.edges[n].append((i,j+1))\n",
+    "    return G\n",
+    "\n",
+    "G = make_grid_graph(10,10)\n",
+    "path = dijkstras(G,(0,0),(5,5))\n",
+    "print \"Path on grid from (0,0) to (5,5):\",path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Heuristic search\n",
     "\n",
     "In many cases, the uniformly expanding strategy of Dijkstra's algorithm\n",
@@ -136,15 +275,80 @@
     "length of the line segment from a configuration to the goal). Then, by\n",
     "replacing line 6 in Dijkstra's algorithm with the line:\n",
     "\n",
-    "1. $v \\gets$ vertex in $Q$ that minimizes $d[v] + h(v)$\n",
+    "6. $v \\gets$ vertex in $Q$ that minimizes $d[v] + h(v)$\n",
     "\n",
     "we obtain a method called *A\\* search*. This method is proven to\n",
     "calculate optimal paths under the conditions that $h(v)$ is *admissible*\n",
     "and *consistent*. Admissibility means that $h(v)$ is a lower bound on\n",
     "the true cost from $v$ to $g$ in the graph, and consistency means that\n",
     "$h(v)$ becomes more accurate as $v$ approaches $g$. (Specifically,\n",
-    "$h(u) \\leq h(v) + c(u,w)$ for all edges $(u,v) \\in E$.)\n",
+    "$h(u) \\leq h(v) + c(u,w)$ for all edges $(u,v) \\in E$.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 27 iterations\n",
+      "Path, heuristic 1: [(0, 0), (0, 1), (1, 1), (1, 2), (2, 2), (2, 3), (3, 3), (3, 4), (4, 4), (4, 5), (5, 5)]\n",
+      "A* succeeded in 11 iterations\n",
+      "Path, heuristic 2: [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 5), (2, 5), (3, 5), (4, 5), (5, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def astar(G,s,g,cost=(lambda v,w:1),heuristic=(lambda v:0),verbose=1):\n",
+    "    d = dict((v,float('inf')) for v in G.vertices)\n",
+    "    p = dict((v,None) for v in G.vertices)\n",
+    "    d[s] = 0\n",
+    "    Q = [(0,0,s)]   #each element is a tuple (f,-c,v) with f=c + heuristic(v), c=cost from start, v=vertex\n",
+    "    nnodes = 0\n",
+    "    while len(Q) > 0:\n",
+    "        f,minus_c,v = heapq.heappop(Q)  #get the element in the queue with the least value of c\n",
+    "        nnodes += 1\n",
+    "        if v == g:\n",
+    "            #found a path\n",
+    "            if verbose: print \"A* succeeded in\",nnodes,\"iterations\"\n",
+    "            return predecessor_traverse(p,s,g)\n",
+    "        for w in G.neighbors(v):\n",
+    "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
+    "            if dcand < d[w]:\n",
+    "                #going through v is optimal\n",
+    "                #if the predecessor of w is not None, then we'll have to adjust the heap\n",
+    "                if p[w] is not None:\n",
+    "                    Q = heapq.heapify([(f,c,x) for (f,c,x) in Q if x is not w])\n",
+    "                d[w] = dcand\n",
+    "                p[w] = v\n",
+    "                #put w back on the queue, with the heuristic value as its priority\n",
+    "                heapq.heappush(Q,(dcand+heuristic(w),-dcand,w))\n",
+    "    #no path found\n",
+    "    if verbose: print \"A* failed in\",nnodes,\"iterations\"\n",
+    "    return None\n",
     "\n",
+    "import math\n",
+    "G = make_grid_graph(10,10)\n",
+    "def h1(x):\n",
+    "    \"\"\"Euclidean distance heuristic\"\"\"\n",
+    "    return math.sqrt((x[0]-5)**2+(x[1]-5)**2)\n",
+    "path = astar(G,(0,0),(5,5),heuristic=h1)\n",
+    "print \"Path, heuristic 1:\",path\n",
+    "\n",
+    "def h2(x):\n",
+    "    \"\"\"Manhattan distance heuristic\"\"\"\n",
+    "    return abs(x[0]-5)+abs(x[1]-5)\n",
+    "path = astar(G,(0,0),(5,5),heuristic=h2)\n",
+    "print \"Path, heuristic 2:\",path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Search on infinite or large graphs\n",
     "\n",
     "Search can also be performed on an *implicit* graph that may be infinite\n",
@@ -172,15 +376,17 @@
     "It is also easy to perform a multi-source and/or multi-goal graph\n",
     "search, that is, to find the shortest path between any source and goal\n",
     "in some designated sets. Given graph $G$, a set of possible start\n",
-    "vertices $S \\subset V$, and a set of goal vertices $G \\subset V$, we can\n",
+    "vertices $S \\subset V$, and a set of goal vertices $T \\subset V$, we can\n",
     "simply construct a new graph $G^\\prime= (V^\\prime, E^\\prime)$ augmented\n",
     "with a virtual start vertex $s$ and a virtual goal vertex $g$ that are\n",
-    "connected to $S$ and $G$ respectively.\n",
+    "connected to $S$ and $T$ respectively.\n",
     "\n",
     "More precisely, let $V^\\prime = V \\cup \\{s,g\\}$ and\n",
-    "$E^\\prime = E \\cup \\{ (s,v)\\quad | \\quad v \\in S \\} \\cup \\{ (v,g) \\quad |\\quad v\\in G\\}$.\n",
+    "$E^\\prime = E \\cup \\{ (s,v)\\quad | \\quad v \\in S \\} \\cup \\{ (v,g) \\quad |\\quad v\\in T\\}$.\n",
     "A search on $G^\\prime$ will yield a path that passes through the optimal\n",
-    "path amongst all pairs of vertices in $S$ and $G$."
+    "path amongst all pairs of vertices in $S$ and $T$.\n",
+    "\n",
+    "Another way of implementing this is to replace in Dijkstra's algorithm the goal test in Line 8 with the condition **if** $v \\in T$, and then set $g=v$."
    ]
   },
   {
