--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -979,11 +979,11 @@
     "As an example, let us consider a single joint planar robot with its\n",
     "joint at the origin, and an end effector at $L_1$ distance away from the\n",
     "origin. The world coordinates of the end effector are:\n",
-    "$$\\V{x}(\\V{q}) = \\ColVecTwo{L_1 \\cos q_1}{L_1 \\sin q_1}.$$ The Jacobian\n",
+    "$$\\V{x}(\\V{q}) = \\begin{bmatrix}{L_1 \\cos q_1} \\\\ {L_1 \\sin q_1} \\end{bmatrix}.$$ The Jacobian\n",
     "of this point is a $2\\times 1$ matrix obtained by taking the derivative\n",
     "with respect to each of the joint coordinates, which is just $q_1$ in\n",
     "this case.\n",
-    "$$J(\\V{q}) \\equiv \\frac{\\partial \\V{x}}{\\partial \\V{q}}(\\V{q}) = \\ColVecTwo{\\partial (L_1 \\cos q_1) / \\partial q_1}{\\partial (L_1 \\sin q_1) / \\partial q_1} = \\ColVecTwo{-L_1 \\sin q_1}{L_1 \\cos q_1}.$$\n",
+    "$$J(\\V{q}) \\equiv \\frac{\\partial \\V{x}}{\\partial \\V{q}}(\\V{q}) = \\begin{bmatrix}{\\partial (L_1 \\cos q_1) / \\partial q_1} \\\\ {\\partial (L_1 \\sin q_1) / \\partial q_1} \\end{bmatrix} = \\begin{bmatrix}{-L_1 \\sin q_1} \\\\ {L_1 \\cos q_1} \\end{bmatrix}.$$\n",
     "Note that this is perpendicular to the direction from the joint to the\n",
     "end effector, with the same magnitude.\n",
     "\n",
@@ -998,15 +998,15 @@
     "### Two joint example\n",
     "\n",
     "Now consider the two joint planar arm [described above](#2R-manipulator). The end effector has world position\n",
-    "$$\\V{x}(\\V{q}) = \\ColVecTwo{c_1(L_1 + c_2 L_2) - s_1 s_2 L_2}{s_1(L_1 + c_2 L_2) + c_1 s_2 L_2}.$$\n",
+    "$$\\V{x}(\\V{q}) = \\begin{bmatrix}{c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} \\\\ {s_1(L_1 + c_2 L_2) + c_1 s_2 L_2} \\end{bmatrix}.$$\n",
     "The first column of the Jacobian is the partial derivative with respect\n",
     "to $q_1$, keeping $q_2$ constant:\n",
-    "$$\\frac{\\partial \\V{x}}{\\partial q_1}(\\V{q}) = \\ColVecTwo{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2}{c_1(L_1 + c_2 L_2) - s_1 s_2 L_2}.$$\n",
+    "$$\\frac{\\partial \\V{x}}{\\partial q_1}(\\V{q}) = \\begin{bmatrix}{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2} \\\\ {c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} \\end{bmatrix}.$$\n",
     "The second column is the partial derivative with respect to $q_2$,\n",
     "keeping $q_1$ constant:\n",
-    "$$\\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}) = \\ColVecTwo{c_1(L_1 - s_2 L_2) - s_1 c_2 L_2}{s_1(L_1 - s_2 L_2) - c_1 c_2 L_2}.$$\n",
+    "$$\\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}) = \\begin{bmatrix}{c_1(L_1 - s_2 L_2) - s_1 c_2 L_2} \\\\ {s_1(L_1 - s_2 L_2) - c_1 c_2 L_2} \\end{bmatrix}.$$\n",
     "Overall, the Jacobian matrix is a $2\\times 2$ matrix as follows:\n",
-    "$$J(\\V{q}) = \\MatTwo{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2}{- c_1 s_2 L_2 - s_1 c_2 L_2}{c_1(L_1 + c_2 L_2) - s_1 s_2 L_2}{s_1 s_2 L_2 - c_1 c_2 L_2}.$$\n",
+    "$$J(\\V{q}) = \\begin{bmatrix}{-s_1(L_1 + c_2 L_2) - c_1 s_2 L_2} & {- c_1 s_2 L_2 - s_1 c_2 L_2} \\\\ {c_1(L_1 + c_2 L_2) - s_1 s_2 L_2} & {s_1 s_2 L_2 - c_1 c_2 L_2} \\end{bmatrix}.$$\n",
     "Observe that the first column is simply a vector perpendicular to\n",
     "$\\V{x}$ with the same magnitude. The second column is a bit more\n",
     "challenging to interpret, but with a bit of scrutiny it can be seen as a\n",
@@ -1047,19 +1047,6 @@
     "parent, its parent's parent, and so on down to the root. Let the task\n",
     "space $\\V{x} = f(\\V{q})$ be given by the position of an end effector on\n",
     "the $n$'th link, and $\\V{x}_n$ are its local coordinates.\n",
-    "\n",
-    "*************\n",
-    "\n",
-    "![fig:Jacobian3R](figures/modeling/jacobian_3R.png)\n",
-    "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Jacobian3R\">Figure 6</a>.\n",
-    "The Jacobian of a planar 3R robot. Its columns are determined by\n",
-    "taking the perpendicular vector to the displacement vector from the\n",
-    "joint center to the end effector. The Jacobian is different for\n",
-    "different configurations (a) and (b).\n",
-    "</div>\n",
-    "\n",
-    "*************\n",
     "\n",
     "If $j \\notin A(n)$, then joint $j$ does not affect the end effector. In\n",
     "this case, the $j$'th column of the Jacobian is zero.\n",
@@ -1106,8 +1093,21 @@
     "T_{n\\rightarrow j}(\\V{q}) \\V{x}_n.$$ This shows that the Jacobian column\n",
     "corresponding to a revolute joint is perpendicular to the vector from\n",
     "the joint to the end effector (rotated $90^\\circ$ CCW).\n",
-    "Fig. [\\[fig:Jacobian3R\\]](#fig:Jacobian3R){reference-type=\"ref\"\n",
-    "reference=\"fig:Jacobian3R\"} illustrates this principle.\n",
+    "[Fig. 6](#fig:Jacobian3R) illustrates this principle.\n",
+    "\n",
+    "\n",
+    "*************\n",
+    "\n",
+    "![fig:Jacobian3R](figures/modeling/jacobian_3R.png)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Jacobian3R\">Figure 6</a>.\n",
+    "The Jacobian of a planar 3R robot. Its columns are determined by\n",
+    "taking the perpendicular vector to the displacement vector from the\n",
+    "joint center to the end effector. The Jacobian is different for\n",
+    "different configurations (a) and (b).\n",
+    "</div>\n",
+    "\n",
+    "*************\n",
     "\n",
     "For a prismatic joint, we have a local transform: $$L_{z,\\V{a}}(q) = \n",
     "\\left[\\begin{array}{ccc}\n",
@@ -1163,7 +1163,7 @@
     "the $j$'th column of the Jacobian is the cross-product between the axis\n",
     "of joint $j$ and the vector pointing from joint $j$ to the end effector\n",
     "(both given in world coordinates). To see this, note that the axis in\n",
-    "world coordinates is $R_j\\V{a} = T_j \\ColVecTwo{\\V{a}}{0}$ and the\n",
+    "world coordinates is $R_j\\V{a} = T_j \\begin{bmatrix} \\V{a} \\\\ 0 \\end{bmatrix}$ and the\n",
     "displacement vector is $T_n \\V{x}_n - \\V{t}_j$. Here, $R_j$ is the\n",
     "orientation of link $j$, $\\V{t}_j$ is its origin, we have implicitly\n",
     "assumed dependence on $\\V{q}$, and we slightly abuse notation to convert\n",
@@ -1313,23 +1313,29 @@
     "end effector and the target (coordinate descent), and iterate through\n",
     "all the joints repeatedly (making it cyclic).\n",
     "\n",
-    "\\For{$i=1,\\ldots,k$}\n",
-    "$\\V{q}_i \\gets \\V{q}_{i-1}$ Compute\n",
-    "$q_j^* = \\arg \\min_{q_j} \\|f(\\V{q}_i)\\|$ Set $\\V{q}_{i,j} \\gets q_j^*$\n",
-    "$\\V{q}_k$\n",
+    "*********************\n",
+    "\n",
+    "<a name=\"alg:CCD\">**Algorithm CCD**</a>\n",
+    "1. **for** $i=1,\\ldots,k$ **do**\n",
+    "2. &nbsp;&nbsp;&nbsp;$\\V{q}_i \\gets \\V{q}_{i-1}$\n",
+    "3. &nbsp;&nbsp;&nbsp;**for** all joints $j = 1,...,n$ $do$\n",
+    "4. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Compute $q_j^* = \\arg \\min_{q_j} \\|f(\\V{q}_i)\\|$\n",
+    "5. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Set $\\V{q}_{i,j} \\gets q_j^*$\n",
+    "6. **return** $\\V{q}_k$\n",
+    "\n",
+    "*********************\n",
     "\n",
     "CCD iterates by performing $k$ passes through the joints as listed in\n",
-    "Algorithm [\\[alg:CCD\\]](#alg:CCD){reference-type=\"ref\"\n",
-    "reference=\"alg:CCD\"}. On each pass, it loops through the $n$ joints, and\n",
+    "[Algorithm CCD](#alg:CCD). On each pass, it loops through the $n$ joints, and\n",
     "modifies each joint $j$ assuming the rest of the robot is fixed.\n",
     "Specifically, line 4 finds the value that minimizes the error keeping\n",
-    "the rest of $\\V{q}_i$ constant, and this is updated in $\\V{q}_i$ in line\n",
-    "5. This procedure iterates until $N$ passes have been made, or\n",
+    "the rest of $\\V{q}_i$ constant, and this is updated in $\\V{q}_i$ in line 5.\n",
+    "This procedure iterates until $N$ passes have been made, or\n",
     "convergence has been reached. Note that the error $\\|f(\\V{q}_i)\\|$ will\n",
     "never increase. However, it may terminate without convergence in the\n",
     "case that a singularity is reached.\n",
     "\n",
-    "To make CCD converge quickly, the single-joint minimization in Step 4\n",
+    "To make CCD converge quickly, the single-joint minimization in Line 4\n",
     "should be fast. In many cases there are closed-form solutions to this\n",
     "problem. For 2D robots with positioning tasks, this consists of finding\n",
     "the angle $\\theta_j$ between the $j$'th joint and the end effector and\n",
@@ -1387,8 +1393,7 @@
     "unique value of $\\Delta \\V{q}_i$ that not only\n",
     "solves ($\\ref{eq:NewtonRaphson}$) but also minimizes the amount of deviation\n",
     "from the previous iterate. See\n",
-    "[Appendix A.1](Linear%02Algebra.ipynb#Pseudoinverse){reference-type=\"ref\"\n",
-    "reference=\"sec:Pseudoinverse\"} for more information. The pseudoinverse\n",
+    "[Appendix A.1](LinearAlgebra.ipynb#Matrix-pseudoinverse) for more information. The pseudoinverse\n",
     "solution $\\Delta \\V{q}_i = -J(\\V{q}_i)^+ f(\\V{q}_i)$ is the solution\n",
     "that minimizes the joint space deviation $\\| \\Delta \\V{q}_i \\|$.\n",
     "\n",
@@ -1443,8 +1448,7 @@
     "solution does not exist, since the result should be as close as possible\n",
     "to attaining the target task. The simplest method is *gradient descent*\n",
     "but higher-order methods are also available as described in\n",
-    "Appendix [\\[sec:GradientDescent\\]](#sec:GradientDescent){reference-type=\"ref\"\n",
-    "reference=\"sec:GradientDescent\"}.\n",
+    "[Appendix B.2](Optimization.ipynb#Gradient-descent).\n",
     "\n",
     "### Incorporating other constraints\n",
     "\n",
@@ -1644,9 +1648,7 @@
     "\n",
     "Minor positioning errors can occur if any of these values are not\n",
     "properly *calibrated*, i.e., measured to high accuracy. We will revisit\n",
-    "calibration in\n",
-    "Chapter [\\[chapter:Calibration\\]](#chapter:Calibration){reference-type=\"ref\"\n",
-    "reference=\"chapter:Calibration\"}. However, major errors can result if\n",
+    "calibration a later chapter. However, major errors can result if\n",
     "reference coordinate frames are misunderstood or interpreted\n",
     "incorrectly.\n",
     "\n",
@@ -1667,10 +1669,7 @@
     "solver fails, the programmer needs to do more digging to discover the\n",
     "root of the problem. To help this, visualization tools can be used in\n",
     "the process of *visual debugging* to inspect reference frames and\n",
-    "variables in a more intuitive way than looking at numbers. More on\n",
-    "visual debugging will be covered in\n",
-    "Chapter [\\[chapter:Middleware\\]](#chapter:Middleware){reference-type=\"ref\"\n",
-    "reference=\"chapter:Middleware\"}.\n",
+    "variables in a more intuitive way than looking at numbers.\n",
     "\n",
     "Moreover, if analytical IK is being used, the following must also hold:\n",
     "\n",
