--- a/LinearAlgebra.ipynb
+++ b/LinearAlgebra.ipynb
@@ -6,16 +6,7 @@
    "source": [
     "# Appendix A. MATHEMATICAL PRELIMINARIES\n",
     "\n",
-    "# A.1. Linear Algebra\n",
-    "<style>\n",
-    "div.figcaption {    \n",
-    "    text-align: center;\n",
-    "    margin-left:1em;\n",
-    "    margin-top:1em;\n",
-    "    margin-right:1em;\n",
-    "    margin-bottom:1em;\n",
-    "    }\n",
-    "</style>"
+    "# A.1. Linear Algebra"
    ]
   },
   {
@@ -47,7 +38,7 @@
     "> **Orthogonal vectors**. Two vectors whose dot product is identically zero are called\n",
     "> *orthogonal*.\n",
     "\n",
-    "For example, $\\V{e_i} \\cdot \\V{e_j} = 0$ for all $i\\neq j$, and so $\\V{e_i}$ and $\\V{e_i}$ are orthogonal.\n",
+    "For example, $\\V{e_i} \\cdot \\V{e_j} = 0$ for any pair $i\\neq j$, and so $\\V{e_i}$ and $\\V{e_j}$ are orthogonal.  Also, $\\begin{bmatrix}1 \\\\ 2 \\end{bmatrix} \\cdot \\begin{bmatrix} -6 \\\\ 3 \\end{bmatrix} = 0$, so these vectors are orthogonal as well.\n",
     "\n",
     "> **Norms**. A norm describes some notion of vector magnitude. The standard Euclidean\n",
     "> norm $\\|\\cdot\\|$ is defined as $\\|\\V{x}\\|=\\sqrt{\\V{x} \\cdot \\V{x}}$.\n",
