--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -242,11 +242,6 @@
     "\n",
     "## Multivariate continuous densities\n",
     "\n",
-    "![Left: A multivariate density function. Right: the cumulative\n",
-    "distribution function corresponding to that\n",
-    "density.[]{label=\"fig:Gaussian\"}](appendix/multivariate_gaussian){#fig:Gaussian\n",
-    "width=\"\\textwidth\"}\n",
-    "\n",
     "Multivariate continuous densities describe the joint distributions of\n",
     "multiple continuous variables. A multivariate cdf $F(x,y)$ gives\n",
     "$$P(X\\leq x,Y\\leq y) = F(x,y)$$ while the joint pdf $f(x,y)$ is defined\n",
@@ -254,24 +249,40 @@
     "$$F(a,b)  = \\int_{-\\infty}^{a}\\int_{-\\infty}^{b} f(x,y) dy dx.$$ An\n",
     "alternate definition of the density takes the limit\n",
     "$$\\lim_{\\epsilon\\rightarrow 0} P(x\\leq X\\leq x+epsilon,y \\leq Y \\leq y+\\epsilon)/\\epsilon^2 = f(x,y).$$\n",
-    "Fig. [\\[fig:Gaussian\\]](#fig:Gaussian){reference-type=\"ref\"\n",
-    "reference=\"fig:Gaussian\"} illustrates an example of the pdf and cdf for\n",
+    "[Fig. 1](#fig:Gaussian) illustrates an example of the pdf and cdf for\n",
     "the bivariate Gaussian distribution.\n",
     "\n",
+    "***********\n",
     "\n",
-    "![Left: Marginalization of a multivariate density involves integration\n",
-    "over a subset variable to obtain a distribution over the others. Right:\n",
-    "Conditioning of a density involves \"slicing\" the distribution at a\n",
-    "particular value and then\n",
-    "re-normalizing.[]{label=\"fig:GaussianMarginalization\"}](appendix/multivariate_gaussian_marginalization){#fig:GaussianMarginalization\n",
-    "width=\"\\textwidth\"}\n",
+    "![fig:Gaussian](figures/appendix/multivariate_gaussian.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:Gaussian\">Figure 1.</a>\n",
+    "    Left: A multivariate density function. Right: the cumulative\n",
+    "distribution function corresponding to that\n",
+    "density. </div>\n",
+    "\n",
+    "***********\n",
     "\n",
     "Marginalization can also be performed on continuous densities. If\n",
     "$f(x,y)$ is the joint density of random variables $X$ and $Y$, then\n",
     "$$g(x) = \\int_{-\\infty}^{\\infty} f(x,y) dy$$ is the density of $X$\n",
     "unconditional on $Y$. This operation is illustrated in\n",
-    "Fig. [\\[fig:GaussianMarginalization\\]](#fig:GaussianMarginalization){reference-type=\"ref\"\n",
-    "reference=\"fig:GaussianMarginalization\"} (left).\n",
+    "[Fig. 2](#fig:GaussianMarginalization) (left).\n",
+    "\n",
+    "***********\n",
+    "\n",
+    "![fig:GaussianMarginalization](figures/appendix/multivariate_gaussian_marginalization.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:GaussianMarginalization\">Figure 2.</a>\n",
+    "    Left: Marginalization of a multivariate density involves integration\n",
+    "over a subset variable to obtain a distribution over the others. Right:\n",
+    "Conditioning of a density involves \"slicing\" the distribution at a\n",
+    "particular value and then\n",
+    "re-normalizing.\n",
+    "</div>\n",
+    "\n",
+    "***********\n",
+    "\n",
     "\n",
     "We may also speak of the conditional probability density of a continuous\n",
     "variable. The standard definition $P(x|y) = P(x,y)/P(y)$ does not seem\n",
@@ -288,8 +299,7 @@
     "$$P(X=x | Y=y) = \\frac{d}{dx} P(X \\leq x | Y = y) = f(x,y)/g(y).$$ This\n",
     "can be thought of as taking a slice through the pdf with $Y=y$, and then\n",
     "normalizing, as illustrated in\n",
-    "Fig. [\\[fig:GaussianMarginalization\\]](#fig:GaussianMarginalization){reference-type=\"ref\"\n",
-    "reference=\"fig:GaussianMarginalization\"} (right).\n",
+    "[Fig. 2](#fig:GaussianMarginalization) (right).\n",
     "\n",
     "## Mean, Standard Deviation, and Variance\n",
     "\n",
@@ -463,8 +473,7 @@
     "\\label{eq:MultivariateGaussian}$$ Like the (univariate) Gaussian\n",
     "distribution, it has a peak at $x=\\boldsymbol{\\mu}$, and its spread is\n",
     "determined by the matrix $\\Sigma$.\n",
-    "Fig. [\\[fig:Gaussian\\]](#fig:Gaussian){reference-type=\"ref\"\n",
-    "reference=\"fig:Gaussian\"} shows the pdf of a bivariate Gaussian with\n",
+    "[Fig. 1](#fig:Gaussian) shows the pdf of a bivariate Gaussian with\n",
     "$\\boldsymbol{\\mu}=0$ and $\\Sigma=I$.\n",
     "\n",
     "The *covariance matrix* is defined as $$\\Sigma_{ij} = Cov[X_i,X_j].$$\n",
@@ -473,7 +482,7 @@
     "off-diagonals determine how much it is skewed.\n",
     "\n",
     "For example, consider a 2D Gaussian with mean\n",
-    "$\\boldsymbol{\\mu} = \\begin{bmatrix}\\mu_1 \\\\ \\mu_2 end{bmatrix}$ and covariance\n",
+    "$\\boldsymbol{\\mu} = \\begin{bmatrix}\\mu_1 \\\\ \\mu_2 \\end{bmatrix}$ and covariance\n",
     "$$\\Sigma = \\begin{bmatrix}\\Sigma_1 && \\Sigma_{12} \\\\ \\Sigma_{12} & \\Sigma_{2} \\end{bmatrix}.$$ If\n",
     "$\\Sigma_{12} = 0$, then $X_1$ and $X_2$ are independent, with respective\n",
     "distributions $X_1 \\sim N(\\mu_1,\\Sigma_1)$ and\n",
@@ -496,7 +505,7 @@
     "$$\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix}\\Sigma_X & 0 \\\\ 0 & \\Sigma_Y \\end{bmatrix}\\right)$$\n",
     "where the mean and covariance matrix are written in block-matrix form.\n",
     "\n",
-    "#### Marginalization of multivariate Gaussians}\n",
+    "#### Marginalization of multivariate Gaussians\n",
     "If $\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix}$ is Gaussian:\n",
     "$$\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix} \\sim N\\left( \\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix} \\Sigma_X & \\Sigma_{XY} \\\\ \\Sigma_{YX} & \\Sigma_Y\\end{bmatrix} \\right)$$\n",
     "then the marginal distribution of $\\V{X}$ is\n",
@@ -504,18 +513,20 @@
     "distribution of $\\V{y}$ is $\\V{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$.\n",
     "\n",
     "\n",
-    "![An affine transform of a Gaussian distribution is also a Gaussian. A\n",
+    "![fig:GaussianTransform](figures/appendix/gaussian_linear_transform.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a name=\"fig:GaussianTransform\">Figure 3</a>.\n",
+    "    An affine transform of a Gaussian distribution is also a Gaussian. A\n",
     "transform $A\\V{x}+\\V{b}$ (left) is applied to an initial zero-mean\n",
     "distribution, whose density is displayed in the leftmost contour plot.\n",
     "The middle contour plot displays the density of the resulting\n",
     "distribution. Applying the transform again yields a density in the\n",
     "rightmost contour\n",
-    "plot.[]{label=\"fig:GaussianTransform\"}](appendix/gaussian_linear_transform){#fig:GaussianTransform\n",
-    "width=\"80%\"}\n",
+    "plot.\n",
+    "    </div>\n",
     "\n",
     "Affine transformations of multivariate Gaussians are also Gaussian\n",
-    "(Fig. [\\[fig:GaussianTransform\\]](#fig:GaussianTransform){reference-type=\"ref\"\n",
-    "reference=\"fig:GaussianTransform\"}). If\n",
+    "([Fig. 3](#fig:GaussianTransform)). If\n",
     "$\\V{X} \\sim N(\\boldsymbol{\\mu},\\Sigma)$, then for any appropriately\n",
     "sized matrix $A$ and vector $\\V{b}$,\n",
     "$$A\\V{X}+\\V{b} \\sim N(A\\boldsymbol{\\mu}+\\V{b},A\\Sigma A^T).$$ More\n",
@@ -537,7 +548,7 @@
     "Conditional distributions of multivariate Gaussians are also Gaussian.\n",
     "Specifically, if $Val(\\V{X}) = \\mathbb{R}^n$ and\n",
     "$Val(\\V{Y}) = \\mathbb{R}^m$ are jointly Gaussian, that is,\n",
-    "$$\\ColVecTwo{\\V{X}}{\\V{Y}} \\sim N\\left(\\ColVecTwo{\\boldsymbol{\\mu}_X}{\\boldsymbol{\\mu}_Y},\\MatTwo{\\Sigma_X}{\\Sigma_{XY}}{\\Sigma_{XY}^T}{\\Sigma_Y}\\right),$$\n",
+    "$$\\begin{bmatrix}{\\V{X}} \\\\ {\\V{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\boldsymbol{\\mu}_X} \\\\ {\\boldsymbol{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
     "then the conditional distribution of $\\V{X}$ given that $\\V{Y}=\\V{y}$ is\n",
     "also Gaussian:\n",
     "$$P(\\V{x}|\\V{y}) = N\\left( \\V{x};\\boldsymbol{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\V{y}-\\boldsymbol{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
@@ -547,12 +558,10 @@
     "($\\Sigma_{XY}=0$), then knowing the value of $\\V{Y}$ does not change the\n",
     "marginal distribution of $\\V{X}$.\n",
     "\n",
-    "Fig. [\\[fig:GaussianMarginalization\\]](#fig:GaussianMarginalization){reference-type=\"ref\"\n",
-    "reference=\"fig:GaussianMarginalization\"}, right illustrates conditioning\n",
+    "[Fig. 2](#fig:GaussianMarginalization), right illustrates conditioning\n",
     "on a zero-mean Gaussian with $\\Sigma=\\MatTwo{0.25}{0.3}{0.3}{1}$ at\n",
     "$x_1=1$. According to\n",
-    "[\\[eq:GaussianConditioning\\]](#eq:GaussianConditioning){reference-type=\"eqref\"\n",
-    "reference=\"eq:GaussianConditioning\"}, the mean of $x_2$ becomes\n",
+    "($\\ref{eq:GaussianConditioning}$), the mean of $x_2$ becomes\n",
     "$0.3\\cdot 0.25^{-1} \\cdot 1 = 1.2$, and its variance becomes\n",
     "$1 - 0.3\\cdot 0.25^{-1} \\cdot 0.3 = 0.64$."
    ]
